# aya-log-example

./: Cargo.toml  README.md
.vim/: coc-settings.json
aya-log-example/: Cargo.toml
aya-log-example-common/: Cargo.toml
aya-log-example-ebpf/: Cargo.toml
aya-log-example-ebpf/src/: main.rs  vmlinux.rs
aya-log-example/src/: main.rs
xtask/src/: build_ebpf.rs  run.rs
