[package]
name = "aya-log-example"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
aya = { git = "https://github.com/aya-rs/aya", branch="main" }
aya-log = { git = "https://github.com/aya-rs/aya-log", branch = "main" }
aya-log-example-common = { path = "../aya-log-example-common", features=["user"] }
anyhow = "1.0.42"
ctrlc = "3.2"
simplelog = "0.11"
tokio = "1.15"

[[bin]]
name = "aya-log-example"
path = "src/main.rs"
